src/test/ui/consts/const-labeled-break.stderr
error[E0658]: `while` is not allowed in a `const`
  --> $DIR/const-labeled-break.rs:10:19
   |
LL | const CRASH: () = 'a: while break 'a {};
   |                   ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
